plugins {
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenLocal()
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'no.novari:kafka:6.0.0'
    implementation 'no.fintlabs:fint-flyt-cache:1.0.0'
    implementation 'org.ehcache:ehcache:3.10.6'
    implementation 'net.sf.ehcache:ehcache:2.10.9.2'

    implementation("no.fint:fint-administrasjon-resource-model-java:${apiVersion}")
    implementation("no.fint:fint-utdanning-resource-model-java:${apiVersion}")

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.spockframework:spock-spring:2.3-groovy-3.0'
    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
}

test {
    useJUnitPlatform()
}
